--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button onclick="restart()" class="btn btn-danger" id="restart">Restart</button>
             <br><br>
             
-            <h4>Developed By : M Deva Nanda</h4>
+            <h4>Developed By : Greshman Gutta</h4>
         
             <div id="myModal" class="modal fade ">
               <div class="modal-dialog" >
